# space-based-ai-datacenter

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCE.md  reproduce_all.py
animation/: orbital_compute_NOTEXT.html  orbital_compute_premium.html
book/: .gitignore  README.md  about_author.tex  build_book.py  cover.tex  main.tex  make_cover_art.py  preamble.tex
linkedin/: LinkedIn_Article_Complete.txt  LinkedIn_Article_PlainText.txt  LinkedIn_Assembly_Guide.txt  LinkedIn_CopyPaste.txt  Master_Report_LinkedIn.txt  Space_DataCenter_LinkedIn_Article.html  _export_svgs.py  build_linkedin_html.py  diagrams.py  make_cover.py
paper/: DISCLOSURE.html  DISCLOSURE.md  Space_DataCenter_Paper.docx  Space_DataCenter_Paper.html  Space_DataCenter_Paper.md  build_paper.py  cover_letter.docx  cover_letter.md
report/: Master_Report.html  Master_Report.md  Mathematical_Guide_Complete.html  Mathematical_Guide_Complete.md  Report_II_Complete.docx  Report_II_Complete.html  Report_II_Complete.md  gen_tables.py  (+13 more)
report-1/: README.md  report_one_thermal.py
systems-model/: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_study.py  validate.py
systems-model/docs/: EQUATION_SOURCES.md  METHODS.md  SOURCES.md
systems-model/orbital_dc/: __init__.py  adcs.py  comms.py  compute.py  constants.py  debris.py  economics.py  environment.py  figures.py  finance.py  groundlink.py  margins.py  montecarlo.py  orbit.py  power.py  propulsion.py  radiation.py  reliability.py  solvers.py  structures.py  system.py  thermal.py  workload.py
systems-model/tests/: test_orbital_dc.py
(+17 files in other folders)
