[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-dc"
version = "1.0.0"
description = "Modular, fully-sourced systems-engineering model for space-based AI data centers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Samarjith Biswas" }]
keywords = ["orbital data center", "spacecraft", "systems engineering", "thermal",
            "orbital debris", "free-space optical", "Project Suncatcher"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = ["numpy>=1.23", "matplotlib>=3.6"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "mypy"]

[project.urls]
Homepage = "https://github.com/SamarjithBiswas/orbital-datacenter-systems-model"

[tool.setuptools]
packages = ["orbital_dc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
